--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.2.1",
     "chalk": "^2.4.1",
     "debug": "^4.1.1",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "morgan": "^1.9.1",
