--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "mongodb": "^3.1.10",
     "morgan": "^1.9.1",
     "mssql": "^4.3.0",
     "nodemon": "^1.18.9"
