--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "chalk": "^2.4.1",
+    "cookie-parser": "^1.4.3",
     "debug": "^4.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "jquery": "^3.3.1",
     "mongodb": "^3.1.10",
     "morgan": "^1.9.1",
     "mssql": "^4.3.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^5.11.0",
